# HackITM26

./: .gitignore  README.md  article_questions.json  generate_questions.py  pyproject.toml  questions.json  questions_prompt.md  scraper.py  tagesschau_articles.json  tagesschau_quiz_questions.json  test.json
blackjack-casino/: package-lock.json  package.json
blackjack-casino/.next/: prerender-manifest.json  trace
blackjack-casino/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
blackjack-casino/.next/cache/webpack/client-development/: index.pack.gz.old
blackjack-casino/.next/cache/webpack/client-production/: 10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  index.pack  index.pack.old
blackjack-casino/.next/cache/webpack/edge-server-production/: index.pack
blackjack-casino/.next/server/: server-reference-manifest.json  webpack-runtime.js
blackjack-casino/.next/server/app/: page.js  page_client-reference-manifest.js
blackjack-casino/.next/server/vendor-chunks/: @swc.js  zustand.js
blackjack-casino/.next/static/chunks/: app-pages-internals.js  webpack.js
blackjack-casino/.next/types/app/: layout.ts  page.ts
blackjack-casino/src/app/: globals.css  layout.tsx  page.tsx
blackjack-casino/src/components/: ActionButtons.tsx  BalanceDisplay.tsx  BettingPanel.tsx  CasinoTable.tsx  Chip.tsx  GameMessage.tsx  HandDisplay.tsx  PlayingCard.tsx  QuizPlaceholder.tsx  Shop.tsx
blackjack-casino/src/lib/: deck.ts  store.ts  themes.ts  types.ts
(+10 files in other folders)
